# oddsfox-pipeline

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.artifact-builder  Dockerfile.artifact-builder.dockerignore  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml  vercel.json  workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: documentation.yml
.github/workflows/: ci.yml  live-readiness.yml  manual-full.yml  release.yml
config/: live-smoke.yaml  polygon-settlement-resolution-attestation.example.yml
dbt/: README.md  costguard.toml  dbt_project.yml
dbt/macros/: polygon_settlement_ratio_half_even.sql  polymarket_models.sql  test_mart_matches_int_wc2026_scope.sql  test_mart_matches_selected_scope.sql  test_no_duplicate_grain.sql  test_price_columns_in_unit_interval.sql  test_price_in_unit_interval.sql  wc2026_strategy_contract.sql
dbt/profiles/: profiles.yml
dbt/seeds/: README.md  international_results_wc2026_team_aliases.csv  kalshi_wc2026_contract.csv  polymarket_us_midterms_2026_contract.csv  polymarket_wc2026_contract.csv  polymarket_wc2026_polygon_settlement_markets.csv  schema.yml  wc2026_base_camps_teams.csv  wc2026_schedule_matches.csv  wc2026_team_canonical_aliases.csv  wc2026_third_place_options.csv  wc2026_tournament_classification.csv  wc2026_venues.csv
dbt/tests/: assert_int_polymarket_token_timeseries_price_requires_timestamps.sql  assert_international_results_wc2026_current_shape.sql  assert_international_results_wc2026_scope.sql  assert_international_results_wc2026_source_freshness_surfaced.sql  assert_international_results_wc2026_tied_knockout_dq.sql  assert_kalshi_wc2026_data_quality_no_errors.sql  assert_kalshi_wc2026_real_teams.sql  assert_kalshi_wc2026_stage_progression_side.sql  assert_mart_gap_diagnostics_non_negative.sql  assert_mart_market_coverage_date_order.sql  assert_mart_market_coverage_has_odds_consistency.sql  assert_mart_market_coverage_has_odds_implies_positive_token_count.sql  assert_mart_market_coverage_matches_token_coverage.sql  assert_mart_markets_volume_floor.sql  assert_mart_sync_run_observability_coverage_floor.sql  assert_mart_sync_run_observability_http_counts_lte_requests.sql  assert_mart_sync_run_observability_no_error_regression.sql  assert_mart_sync_run_observability_non_negative.sql  assert_mart_sync_run_observability_planned_gte_processed.sql  assert_mart_sync_run_observability_rows_per_token_ratio.sql  assert_mart_token_coverage_date_and_flag_consistency.sql  assert_mart_token_coverage_fully_checked_tokens_lte_token_count.sql  assert_mart_token_coverage_market_fully_checked_logic.sql  assert_mart_token_coverage_row_count_matches_stg_market_tokens.sql  assert_mart_token_coverage_token_days_matches_int.sql  assert_polygon_settlement_ratio_half_even.sql  assert_polymarket_wc2026_actionable_live_market_contract.sql  assert_polymarket_wc2026_graph_export_binary_markets.sql  assert_polymarket_wc2026_graph_export_real_teams.sql  assert_polymarket_wc2026_knockout_data_quality_no_errors.sql  assert_polymarket_wc2026_knockout_hourly_recent_window.sql  assert_polymarket_wc2026_knockout_live_freshness_dq_active_only.sql  assert_polymarket_wc2026_knockout_live_odds_fresh.sql  assert_polymarket_wc2026_knockout_live_team_alignment_surfaced.sql  assert_polymarket_wc2026_knockout_market_tokens_sibling_consistency.sql  assert_polymarket_wc2026_knockout_missing_hourly_surfaced.sql  assert_polymarket_wc2026_knockout_progression_side.sql  assert_polymarket_wc2026_knockout_real_teams.sql  assert_polymarket_wc2026_knockout_source_anomalies_surfaced.sql  assert_polymarket_wc2026_knockout_source_anomaly_counts.sql  (+32 more)
deploy/hosted-graph/: .env.example  docker-compose.yml
docs/: README.md  analyst-guide.md  architecture.md  changelog.md  cli.md  community.md  compliance.md  configuration.md  data-contracts.md  data-dictionary.md  development.md  hosted-graph-deployment.md  index.md  interfaces.md  metadata.md  naming.md  operations.md  operator-runbook.md  overview.md  quickstart.md  roadmap.md  scripts.md  system-overview.md  troubleshooting.md  warehouse.md
docs/audiences/: analysts.md  contributors.md  integrators.md  operators.md
docs/concepts/: architecture.md  decisions.md  faq.md  (+5 more)
examples/: 01_sync_active_markets.md  02_kalshi_market_sync.md  03_user_pnl.md  starter_queries.sql
scripts/: _export_common.py  audit_polymarket_selected_scope.py  audit_selected_scope_tag_coverage.py  benchmark_polymarket_wc2026_polygon_settlement.py  build_hosted_artifacts.py  build_polymarket_wc2026_polygon_settlement_release.py  compact_warehouse.py  count_gamma_tag_events.py  count_polymarket_wc2026_gamma_tag_events.py  count_wc2026_gamma_tag_events.py  export_polymarket_wc2026_graph_hourly_odds.py  export_polymarket_wc2026_hourly_odds.py  export_polymarket_wc2026_knockout_hourly_odds.py  export_polymarket_wc2026_knockout_markets.py  export_polymarket_wc2026_match_minute_odds.py  export_polymarket_wc2026_polygon_settlement_minute_odds.py  export_selected_hourly_odds.py  export_selected_minutely_odds.py  export_wc2026_hourly_odds.py  export_wc2026_knockout_markets.py  export_wc2026_minutely_odds.py  generate_polymarket_wc2026_polygon_settlement_seed.py  profile_warehouse.py  prune_odds_history.py  repair_polymarket_token_sync_ledger.py  repair_polymarket_wc2026_token_sync_ledger.py  repair_wc2026_polymarket_token_sync_ledger.py  run_gx_data_quality.py  run_scope.py  seed_dbt_source_freshness.py
src/: backfill.rs  cli.rs  collect.rs  config.rs  duckdb_engine.rs  explore.rs  head.rs  http.rs  init.rs  lib.rs  main.rs  ops.rs  parquet.rs  paths.rs  prices.rs  progress_log.rs  quickstart.rs  repair.rs  settings.rs  snapshot.rs  sql_cmd.rs  sync.rs
tests/: README.md  contract.golden.json  test_ci_workflow.py  test_distribution_policy.py  test_docs_render.py  test_docs_structure.py  test_hosted_graph_deploy.py  test_makefile.py  test_naming_policy.py  test_package_distribution.py
(+542 files in other folders)
