[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oddsfox-pipeline"
version = "0.1.5"
description = "Dagster-orchestrated dlt + dbt + DuckDB pipeline for prediction-market data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dagster>=1.13.13",
  "dagster-webserver>=1.8.0",
  "dagster-dbt>=0.24.0",
  "dagster-dlt>=0.24.0",
  "dbt-core>=1.11.12",
  "dbt-duckdb>=1.8.0",
  "dlt[duckdb]>=1.0.0",
  "duckdb>=1.5.4",
  "polars>=1.42.1",
  "pyarrow>=14.0.0",
  "PyYAML>=6.0",
  "python-dotenv>=1.0.0",
  "requests>=2.34.2",
  "tqdm>=4.68.4",
]

[project.optional-dependencies]
dev = [
  "dagster-dg-cli>=1.13.0",
  "great_expectations>=1.19.0",
  "hypothesis>=6.156.6",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "playwright>=1.55.0,<2",
  "pip-audit>=2.10.1",
  "pytest>=9.1.1",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.15.21",
  "sqlfluff>=4.2.2",
  "sqlfluff-templater-dbt>=3.0.0",
  "vcrpy>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["oddsfox_pipeline*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:.*AssetExecutionContext\\.op is deprecated.*:DeprecationWarning:dagster_dbt.asset_utils",
]
markers = [
  "facade: facade-level orchestration tests",
  "contract: replay-only external API contract tests excluded from default gates",
  "integration: hits external tools or shared resources",
  "performance: long-running benchmarks",
  "slow: expensive checks excluded from normal unit runs",
  "orchestration: Dagster materialize or dbt asset tests",
  "polymarket: Polymarket ingest and sync tests",
  "repo_check: repository policy checks run via make lint only",
]

[tool.coverage.run]
branch = true
source = ["src/oddsfox_pipeline"]
omit = ["src/oddsfox_pipeline/storage/duckdb/profile/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py310"
src = ["src"]
line-length = 88
extend-exclude = [
  "dbt/target",
  "dbt/dbt_packages",
  ".venv",
  ".dagster_home",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"src/oddsfox_pipeline/config/__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"
max_line_length = 130

[tool.sqlfluff.templater.dbt]
project_dir = "dbt"
profiles_dir = "dbt/profiles"
profile = "oddsfox"
target = "dev"
